# proman

./: Cargo.toml  Default PATH variables.txt  Proman Project File.txt  Proman Project Filse and Configuration.txt  autorun-commands.bat  config.cfg
ideas/: Launcher.txt
ideas/ahk script ideas/: CLSID runner.ahk  ChooseIconEx.ahk  Cmdline Shortcuts.ahk  CmnDlg.ahk  Dictionary.ahk  EnglishAutoCorrect.ahk  Icon Chooser.ahk  MySQL Service Control.ahk  Taskbar Icon Context Menu.txt  Windows Run.ahk  ahk change wallpaper.txt  ahk md5.txt  ahk query performance counter.txt  ahk send post data.txt  ahk set system time.txt  ahk windows api messagebox.txt  bandwidth.ahk  basic_assoc_arrays.ahk  clearWebHistory.ahk  crc.ahk  cryptEmail.ahk  gui_bandwidth.ahk  md5.ahk  netmeter.ahk  network meter.ahk  ping.ahk  run-wait-ahk.ahk  search_engine_urls.txt  servicesReader.ahk  shutdownVNC.ahk  shutdown_torrents.ahk  start screen saver.ahk  tooltip.ahk  turn off monitor.ahk
ideas/ideas/: Binary Prefixes and 1000 vs 1024 Bytes.txt  Breadth First Search (BFS) & Depth First Search (DFS).txt  Metric.txt  Numeric Prefixes.txt  Palindrome & semordnilap.txt  Programming Problems.txt  Weights.txt  Windows Clear Icon Cache.txt  Windows Shortcuts - Location Bar Focus AND Open CMD Prompt to Folder Location.txt  cominations and permutations.txt  days in months.txt  (+16 more)
notes/: Notes for Project Manager.txt  Project Manager.txt - Shortcut.lnk  old - project manager layout.txt  path.default.txt
removed/: inject.rs  inject_dirs.rs  injectpm.rs  lang_types.rs
src/: _config.rs  main.rs  scand.rs
(+18 files in other folders)
