[package]
name = "proman"
version = "0.1.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]



[dependencies]
argparse = "0.2.*"
regex = "0.2.*"
rmp-serde = "0.13.*"
scan_dir = "0.3.3"
serde = "1.0.11"
serde_derive = "1.0.*"
serde_json = "1.0.*"
setenv = "0.1.*"
time = "0.1.*"

# [[bin]]
# name = "injectpm"
# path = "src/injectpm.rs"

# src = "src/injectpm.rs"
 
# [[bin]]
# name = ""
# src = "src/"
# 
# [[bin]]
# name = ""
# src = "src/"
# 
# [[bin]]
# name = ""
# src = "src/"
# 
# [[bin]]
# name = ""
# src = "src/"
# 
# [[bin]]
# name = ""
# src = "src/"
# 
# [[bin]]
# name = ""
# src = "src/"
# 